routes/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: agentgateway-system
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: agentgateway-system
  hostnames:
    - "api.example.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
